r420 | gaser | 2011-07-04 16:26:13

M      sanlmMex.m

Removed weird character in sanlmMex.m, that caused errors.
------------------------------------------------------------------------
r421 | gaser | 2011-07-06 15:20:39

M      sanlmMex.mexw32
M      down_cut.mexw64
M      median3.mexa64
M      median3.mexw32
M      AmapMex.mexw32
M      eikonal3.mexw32
M      median3.c
M      median3.mexmaci64
M      sanlmMex.mexw64
M      vbdist.mexw32
M      median3.mexmaci
M      down_cut.mexw32
M      median3.mexw64
M      AmapMex.mexw64
M      eikonal3.mexw64
M      median3.mexglx
M      vbdist.mexw64

Removed bug in median3d.c and recompiled mex-files.
------------------------------------------------------------------------
r422 | gaser | 2011-07-06 16:35:23

M      GBM.m

Corrected overflow of uint8 values in GBM.m.
------------------------------------------------------------------------
r423 | gaser | 2011-07-07 14:15:34

M       VBM8-Manual_Japanese.pdf

Kiyotaka Nemoto updated the VBM8 manual.
------------------------------------------------------------------------
r424 | gaser | 2011-07-26 00:56:22

M      cg_vbm8_defs.m
M      spm_vbm8.m
M      cg_vbm8_tools.m
M      cg_check_cov.m
M      cg_vbm8_longitudinal.m
M      cg_noise_estimation.m

(1) Allow gap for slices in cg_check_cov.m to speed up.
(2) Added different GUI to apply deformation to many images as well as many 
    subjects.
(3) Some changes in longitudinal batch (interpolation, bias regularization).
------------------------------------------------------------------------
r425 | gaser | 2011-08-22 16:39:51

M       spm_vbm8.m

Added menu entry to open VBM8 manual.
------------------------------------------------------------------------
r426 | gaser | 2011-09-28 22:40:07

M       spm_vbm8.m
M       CHANGES.txt

Added menu entry to open VBM8 manual.
------------------------------------------------------------------------
r426 | gaser | 2011-09-28 22:42:26